fixed spacing

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -52,4 +52,7 @@ $body-color: #333
 #social_media_icons
   font-size: 1.5em
 
+.resume_header
+  margin-top: 1.5em
+
 @import "~bulma"
